# kata-machine

./: NOTES.md  README.md
NOTES/: dynamic-programming.md  general.md  graph.md  heap.md  lru.md  trees.md
go-kata/: Makefile  NOTES.md  README.md  go.mod
python_kata/: NOTES.md  README.md  pyproject.toml
python_kata/src/algorithms/: two_crystal_ball_problem.py
python_kata/src/algorithms/searching/: binary_search.py  linear_search.py
python_kata/src/algorithms/sorting/: bubble_sort.py  merge_sort.py  quick_sort.py
python_kata/src/data_structures/: array_list.py  linked_list.py  queue.py  ring_buffer.py  stack.py
python_kata/src/graphs/: dijkstra.py
python_kata/src/recursion/: maze_solver.py
python_kata/src/trees/binary_tree/: bfs.py  bfs_tree_depth.py  in_order_traversal.py  node.py  post_order_traversal.py  pre_order_traversal.py
python_kata/tests/: test_maze_solver.py
python_kata/tests/tests_algorithms/: test_two_crystal_ball_problem.py
python_kata/tests/tests_algorithms/searching/: test_binary_search.py  test_linear_search.py
python_kata/tests/tests_algorithms/sorting/: test_bubble_sort.py  test_merge_sort.py  test_quick_sort.py
python_kata/tests/tests_data-structures/: test_array_list.py  test_linked_list.py  test_queue.py  test_ring_buffer.py  test_stack.py
python_kata/tests/tests_graphs/: test_dijkstra.py
python_kata/tests/tests_trees/binary_tree/: binary_tree.py  test_bfs.py  test_bfs_tree_depth.py  test_in_order_traversal.py  test_post_order_traversal.py  test_pre_order_traversal.py
typescript-kata/: NOTES.md  package-lock.json  (+3 more)
(+121 files in other folders)
